force-app/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <label>Desconto de Banda</label>
    <nameField>
        <displayFormat>DESC-{0000}</displayFormat>
        <label>Desconto de Banda Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Descontos de Banda</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>