force-app/main/default/objects/Discount__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Aprovador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GerenteFilial</fullName>
                <label>Gerente Filial</label>
            </value>
            <value>
                <fullName>GerenteRegional</fullName>
                <label>Gerente Regional</label>
            </value>
            <value>
                <fullName>Diretor</fullName>
                <label>Diretor BU</label>
            </value>
            <value>
                <fullName>Diretor Torre</fullName>
            </value>
            <value>
                <fullName>ComiteMargem</fullName>
                <label>Comitê Margem</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>