force-app/main/default/objects/Discount__c/fields/ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>ClientGroup__c</fullName>
    <label>Grupo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>