force-app/main/default/objects/Discount__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data Final</label>
    <type>Date</type>
</CustomField>