force-app/main/default/objects/Discount__c/fields/InitialDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDate__c</fullName>
    <label>Data Inicial</label>
    <type>Date</type>
</CustomField>