force-app/main/default/objects/Discount__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Armazena a margem mínima esperada para um Pedido</description>
    <label>Margem</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>