force-app/main/default/objects/Discount__c/fields/MaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>MaxPercentage__c</fullName>
    <label>Porcentagem Máxima</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>