force-app/main/default/objects/Discount__c/fields/MinPercentage__c.field-meta.xml
<CustomField>
    <fullName>MinPercentage__c</fullName>
    <label>Porcentagem Mínima</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>