force-app/main/default/objects/Discount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Descontos de Banda</relationshipLabel>
    <relationshipName>Descontos_de_Banda</relationshipName>
    <type>Lookup</type>
</CustomField>