force-app/main/default/objects/Discount__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>ProductFamily__c</referenceTo>
    <relationshipLabel>Descontos de Banda</relationshipLabel>
    <relationshipName>Descontos_de_Banda</relationshipName>
    <type>Lookup</type>
</CustomField>