force-app/main/default/objects/Discount__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo do Produto</label>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipLabel>Descontos de Banda</relationshipLabel>
    <relationshipName>Descontos_de_Banda</relationshipName>
    <type>Lookup</type>
</CustomField>