force-app/main/default/objects/Discount__c/fields/ProductsSubGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductsSubGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubGrupo de Produtos</label>
    <referenceTo>ProductSubGroup__c</referenceTo>
    <relationshipLabel>Descontos de Banda</relationshipLabel>
    <relationshipName>Descontos_de_Banda</relationshipName>
    <type>Lookup</type>
</CustomField>