force-app/main/default/objects/Discount__c/listViews/Descontos.listView-meta.xml
<ListView>
    <fullName>Descontos</fullName>
    <columns>NAME</columns>
    <columns>ClientGroup__c</columns>
    <columns>ProductGroup__c</columns>
    <columns>MaxPercentage__c</columns>
    <columns>MinPercentage__c</columns>
    <columns>Approver__c</columns>
    <columns>EndDate__c</columns>
    <columns>InitialDate__c</columns>
    <columns>Margin__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Descontos</label>
</ListView>